--- a/rest-full-service/pom.xml
+++ b/rest-full-service/pom.xml
@@ -33,6 +33,16 @@
 			<artifactId>gson</artifactId>
 			<version>2.6.2</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
